# CryptoQuik

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  startup.sh  ‎pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
deployments/dev/kind/: create_cluster.sh  kind-with-portmapping.yaml
docker-compose/: Makefile  redpanda.yml  technical-indicators-historical.yml  technical-indicators-live.yml  technical-indicators-pipeline.yml
services/candles/: Dockerfile  config.py  live.settings.env  pyproject.toml  run.py  settings.env
services/news/: Dockerfile  Makefile  config.py  news_downloader.py  pyproject.toml
services/news-signal/: Makefile  config.py  pyproject.toml  run.py  settings.env
services/news-signal/llms/: base.py  claude.py  config.py  factory.py  ollama.py
services/technical-indicators/: Dockerfile  Makefile  candle.py  config.py  live.settings.env  pyproject.toml  run.py  settings.env  technical_indicators.py
services/to-feature-store/: Dockerfile  Makefile  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  sinks.py
services/trades/: Dockerfile  Makefile  README.md  config.py  multistage.Dockerfile  naive.Dockerfile  onestage.Dockerfile  pyproject.toml  run.py  settings.env
services/trades/kraken_api/: mock.py  rest.py  trade.py  websocket.py
services/trades/src/trades/: kraken_api.py  main.py
