[project]
name = "crypto-predictor-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "quixstreams>=3.17.0",
    "websocket-client>=1.8.0",
]

[tool.uv.workspace]
members = [
    "services/trades",
]
